@@ -2,6 +2,7 @@ parse_sysconf $TEST_DIR/nslu2_static_no_gw.sysconf
 if [ "$INTERFACE" = "ixp0" ]; then
 	INTERFACE=eth0
 fi
+sanity_check_static_config
 if [ "$NET_CONFIG" != "static" ]; then
 	IPADDRESS=192.168.1.77
 	NETMASK=255.255.255.0
